Fix offline bar overlapping text

--- a/src/App.scss
+++ b/src/App.scss
@@ -147,7 +147,6 @@ footer{
   background-color: var(--color-text);
   color: var(--bg-lighter);
   font-size: 14px;
-  line-height: 24px;
+  line-height: 22px;
   text-align: center;
-  position: absolute;
 }
